codex-rs/tui/src/chatwidget/snapshots/codex_tui__chatwidget__tests__status_line_goal_complete_elapsed_footer.snap
---
source: tui/src/chatwidget/tests/status_and_layout.rs
expression: normalized_backend_snapshot(terminal.backend())
---
"                                                                                "
"╭──────────────────────────────────────────────────────────────────────────────╮"
"│ > Ask Codex to do anything                                                   │"
"╰──────────────────────────────────────────────────────────────────── browser ─╯"
"  gpt-5.4                                           Goal achieved (2d 23h 42m)  "
