codex-rs/tui/src/chatwidget/snapshots/codex_tui__chatwidget__tests__status_line_model_with_reasoning_fast_footer.snap
---
source: tui/src/chatwidget/tests/status_and_layout.rs
expression: normalized_backend_snapshot(terminal.backend())
---
"                                                                                "
"╭──────────────────────────────────────────────────────────────────────────────╮"
"│ > Ask Codex to do anything                                                   │"
"╰──────────────────────────────────────────────────────────────────── browser ─╯"
"  gpt-5.4 xhigh fast · Context 0% used · /tmp/project                           "
